--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="theme-color" content="#F5F1EC">
   <meta charset="utf-8">
   <title>WeddingInvitation</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Inter:wght@300;400;500&family=Great+Vibes&display=swap" rel="stylesheet">
+
+  <meta name="theme-color" content="#F5F1EC">
+
 </head>
 <body>
   <app-root></app-root>
